--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     <!--Seção de preços-->
     <section class="preco">
         <div class="preco-item">
-            <h2>Fiat Cronos</h2>
+            <h2>Fiat</h2>
+            
+
             <span><sup>R$</sup>98.990</span>
             <ul>
                 <li>13,5 km/l na cidade com gasolina</li>
