--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="pag-pg">
+<body>
     
     <div class="superinfo-bg">
         <div class="superinfo">
